# Array

./: .gitignore  CMakeLists.txt  README.md
examples/: main.c
src/: array.c  array.h  array_io.h
